# many_to_many_api-django

./: README.md  manage.py  pyproject.toml
authors/: admin.py  models.py  serializer.py  views.py
authors/migrations/: 0001_initial.py
many_to_many_api/: settings.py  urls.py  wsgi.py
